# chadland

./: Cargo.toml  flake.nix
src/: iced.rs  input.rs  lib.rs  main.rs  run.rs  socket.rs  state.rs  winit.rs
src/backends/: mod.rs  winit.rs
src/handlers/: compositor.rs  dmabuf.rs  mod.rs  output.rs  seat.rs  shm.rs  xdg_shell.rs
src/iced/: drm.rs  mod.rs  scissors.rs  scissors.wgsl  texture.rs  wgpu.rs
src/shell/: mod.rs  window.rs
src/util/: surface.rs
