[package]
name = "chadland"
version = "0.1.0"
edition = "2021"

[dependencies]
smithay = { git = "https://github.com/Smithay/smithay.git", features = [ "backend_gbm_has_fd_for_plane" ] }
calloop = { version = "0.14.2", features = [ "executor" ] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
paste = "1.0.15"
wgpu = "23.0.1"
futures = { version = "0.3.31", features = [ "executor" ] }

iced_core = { git = "https://github.com/iced-rs/iced.git", rev = "f2c9b6b2ffc50d67d9789e77cb55eeb2a0ebe470", features = [ "advanced" ] }
iced_runtime = { git = "https://github.com/iced-rs/iced.git", rev = "f2c9b6b2ffc50d67d9789e77cb55eeb2a0ebe470" }
iced_widget = { git = "https://github.com/iced-rs/iced.git", rev = "f2c9b6b2ffc50d67d9789e77cb55eeb2a0ebe470", features = [ "advanced", "lazy", "wgpu" ] }
iced_wgpu = { git = "https://github.com/iced-rs/iced.git", rev = "f2c9b6b2ffc50d67d9789e77cb55eeb2a0ebe470" }
